test/good/positif_test_0.tpc
int gob1, gob2;

int main(void){
    int a;
    gob2 = 10;
    gob1 = 10 + 20 * gob2;
    return 0;
}